examples/overflow_fail.error
examples/overflow_fail.etch:7:36: error: potential addition overflow
  6 |   let large_b: int = rand(1000);                 // Range: [0, 1000]
  7 |   let overflow_risk: int = large_a + large_b;    // Should fail: potential overflow
                                         ^
  8 |   print(overflow_risk);